--- a/css/mediaMyPhone.css
+++ b/css/mediaMyPhone.css
@@ -1064,38 +1064,49 @@ input:required{
 /*--------------------------------------Страница Фото--------------------------------------*/
 
 /*---------Таблица фото: HOME И GR-------------*/
+.message{
+	visibility: hidden;
+	display: none;
+}
+.message_phone{
+	visibility: visible;
+	display: block;
+}
 .photo_table{
-	padding-top: 90px;
-	width: 100%;
+	visibility: hidden;
+	display: none;
 }
 
+.photo_table_phone{
+	visibility: visible;
+	display: block;
+	
+	padding-top: 60px;
+	width: 100%;
+}
 .photo_table_2{
 	/* border-spacing: 50px; */
 }
 /*----------------------*/
 .photo_table_home{
+	visibility: visible;
+	display: block;
+	
 	position: relative;
 	width: 100%;
+	margin-left: 5px;
 	
-	height: 400px;
-	width: 584px;
+	width: 360px;
+	height: 290px;
 	
 	display: inline-block; /* Строчно-блочный элемент */
     overflow: hidden; /* Скрываем всё за контуром */
 	
-	border-right: 25px solid #fff; 
+	border-right: 0px solid #fff; 
 }
-
-.photo_table_home img {
-    transition: 1s; /* Время эффекта */
-    display: block; /* Убираем небольшой отступ снизу */
-}
-
-.photo_table_home img:hover {
-    transform: scale(1); /* Увеличиваем масштаб */
-}
-   
+ 
 .photo_table_home .photo_table_home_bg{
+	margin-left: 5px;
 	position: absolute;
 	background: #fdeef8a6;
 	width: 100%;
@@ -1104,11 +1115,6 @@ input:required{
 	
 	top: 0px;
 }
-
-.photo_table_home:hover .photo_table_home_bg{
-	background: #f9edf573;
-}
-
 
 .home_text{
 	position: absolute;
@@ -1118,7 +1124,7 @@ input:required{
 	font-weight: 800;
 	text-align: center;
 	
-	top: 171px;
+	top: 110px;
 	width: 100%;
 	z-index: 1000;
 }
@@ -1126,28 +1132,23 @@ input:required{
 /*----------------------*/
 .photo_table_gr{
 	position: relative;
+	margin-left: 5px;
 	
-	height: 400px;
-	width: 584px;
+	width: 360px;
+	height: 290px;
 	
-	padding-right: 10px;
+	/* padding-right: 10px; */
 	
 	display: inline-block; /* Строчно-блочный элемент */
     overflow: hidden; /* Скрываем всё за контуром */
 	
-	border-left: 25px solid #fff
-}
-
-.photo_table_gr img {
-    transition: 3s; /* Время эффекта */
-    display: block; /* Убираем небольшой отступ снизу */
-}
-
-.photo_table_gr img:hover {
-    transform: scale(1); /* Увеличиваем масштаб */
+	border-left: 0px solid #fff;
+	border-top: 10px solid #fff;
 }
 
 .photo_table_gr .photo_table_gr_bg{
+	margin-left: 5px;
+	
 	position: absolute;
 	background: #fdeef8a6;
 	width: 100%;
@@ -1155,10 +1156,6 @@ input:required{
 	transition: .20s;
 	
 	top: 0px;
-}
-
-.photo_table_gr:hover .photo_table_gr_bg{
-	background: #f9edf573;
 }
 
 .gr_text{
@@ -1170,7 +1167,7 @@ input:required{
 	font-weight: 800;
 	text-align: center;
 	
-	top: 161px;
+	top: 100px;
 	width: 100%;
 	z-index: 1000;
 }
@@ -1180,87 +1177,939 @@ input:required{
 	visibility: hidden;
 	display: none;
 }
+.footer_phone_phone{
+	visibility: visible;
+	display: block;
+	
+	position: relative;
+	background: url("../img/footer/footer_phone.png");
+	width: 400px;
+	height: 470px;
+	top: 40px;
+	color: #fff;
+	/* padding-left: 32%; */
+	text-align: left;
+	font-weight: 400;
+}
+
+.footer_{
+	padding-left: 40%;
+}
+
 /*---------Черный подвал страницы фото-------------*/
 .black_footer_photo{
+	visibility: hidden;
+	display: none;
+	
 	position: relative;
 	background: black;
 	height: 92px;
-	top: 60px;
+	top: 40px;
 	bottom: 0;
-	font-size: 16px;
+	font-size: 14px;
 	color: #fff;
-	padding-left: 40px;
+	padding-left: 20px;
 	padding-top: 38px;
 }
 
 /*--------------------------------------Страница Фото Дома--------------------------------------*/
 
 .photo_dom_table{
-	padding-top: 80px;
-	width: 100%;
-}
-/*----------------------*/
-
-.photo_dom_1{
-	position: relative;
-	width: 100%;
-	
-	height: 395px;
-	width: 395px;
-	
-	display: inline-block; /* Строчно-блочный элемент */
-    overflow: hidden; /* Скрываем всё за контуром */
-	
-	border-right: 35px solid #fff;
-	border-bottom: 35px solid #fff;
-}
-.photo_dom_2{
-	position: relative;
-	width: 100%;
-	
-	height: 395px;
-	width: 400px;
-	
-	display: inline-block; /* Строчно-блочный элемент */
-    overflow: hidden; /* Скрываем всё за контуром */
-	
-	border-left: 20px solid #fff;
-	border-right: 20px solid #fff;
-	border-bottom: 35px solid #fff;
-}
-/* .pdt{ */
-	/* border-bottom: 35px solid #fff; */
-/* } */
-.photo_dom_3{
-	position: relative;
-	width: 100%;
-	
-	height: 395px;
-	width: 395px;
-	
-	display: inline-block; /* Строчно-блочный элемент */
-    overflow: hidden; /* Скрываем всё за контуром */
-	
-	border-left: 35px solid #fff;
-	border-bottom: 35px solid #fff;
-}
-
-/*---------Подвал страницы фото дома-------------*/
-.footer_photo_dom{
 	visibility: hidden;
 	display: none;
 }
-/*---------Черный подвал страницы фото-------------*/
-.black_footer_photo_dom{
+.photo_dom_table_phone{
+	visibility: visible;
+	display: block;
+	
+	padding-top: 60px;
+	padding-left: 20px;
+	width: 100%;
+}
+
+/*--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+/*--------------------------------------Страница Услуг----------------------------------------*/
+.message_text_phone3{
+	visibility: visible;
+	display: block;
+	
+	position: relative;
+	font-size: 24px;
+	color: #fff;
+	font-weight: bold;
+	text-align: left;
+	line-height: 1.1;
+	padding-top: 10px;
+	padding-left: 20px;
+}
+.medical_care{
+	padding-top: 40px;
+	width: 100%;
+	padding-left: 20px;
+	padding-right: 20px;
+}
+
+.medical_care_text{
+	position: relative;
+	/* padding-top: 45px; */
+	font-size: 14px;
+}
+.medical_care_text_0{
+	padding-top: 20px;
+	font-size: 18px;
+	font-weight: 900;
+}
+.medical_care_text_1{
+	padding-top: 10px;
+	font-size: 14px;
+	/* font-weight: 400; */
+}
+.medical_care_text_2{
+	padding-top: 20px;
+	font-size: 18px;
+	font-weight: 900;
+}
+.medical_care_text_3{
+	padding-top: 10px;
+	font-size: 14px;
+	/* font-weight: 400; */
+}
+.medical_care_text_4{
+	padding-top: 10px;
+	font-size: 14px;
+	/* font-weight: 400; */
+}
+.medical_care_text_5{
+	padding-top: 20px;
+	font-size: 14px;
+	/* font-weight: 400; */
+}
+
+/*---------Подвал страницы Медицинский уход-------------*/
+.footer_1{
+	visibility: hidden;
+	display: none;
+}
+.footer_1_phone{
+	visibility: visible;
+	display: block;
+	
+	position: relative;
+	background: url("../img/footer/footer_phone.png");
+	width: 400px;
+	height: 470px;
+	top: 60px;
+	color: #fff;
+	/* padding-left: 32%; */
+	text-align: left;
+	font-weight: 400;
+}
+
+.footer_{
+	padding-left: 40%;
+}
+/*---------Черный подвал страницы Медицинский уход-------------*/
+.black_footer_1{
 	position: relative;
 	background: black;
 	height: 92px;
-	top: 30px;
+	top: 60px;
+	bottom: 0;
+	font-size: 14px;
+	color: #fff;
+	padding-left: 20px;
+	padding-top: 38px;
+}
+
+
+
+
+/*--------------------------------------Страница Услуг  2----------------------------------------*/
+
+/*---------------------Блок со вставкой оглавления---------------*/
+
+/*---------------------1 блок---------------*/
+._2_services_desktop{
+	visibility: hidden;
+	display: none;
+}
+._2_services_1{
+	padding-top: 40px;
+	
+	padding-left: 20px;
+	padding-right: 20px;
+}
+._2_services_text_1{
+	width: 100%;
+	
+	padding-left: 0px;
+}
+._2_services_text_1-1{
+	padding-top: 20px;
+	width: 100%;
+	
+	padding-left: 0px;
+}
+
+/*---------------------2 блок со вставкой оглавления блока---------------*/
+
+._2_services_2{
+	position: relative;
+	width: 100%;
+	
+	padding-top: 45px;
+	padding-left: 0px;
+	letter-spacing: -0.9px;
+	font-weight: 900;
+	color: #754e6a;
+	
+	line-height: 1.1;
+}
+
+._2_services_logo_2_phone{
+	visibility: visible;
+	display: block;
+	top: 50px;
+
+	padding-left: 15px;
+
+	position: absolute;
+	
+	font-size: 16px;
+
+	width: 100%;
+	text-align: left;
+}
+
+._2_services_logo_3_phone{
+	visibility: visible;
+	display: block;
+	position: absolute;
+	top: 50px;
+	
+	font-size: 16px;
+	
+	padding-right: 15px;
+
+	width: 100%;
+	text-align: right;
+}
+._2_services_img_phone{
+visibility: visible;
+	display: block;
+}
+._2_services_logo_2{
+visibility: hidden;
+	display: none;
+}
+._2_services_logo_2-1{
+visibility: hidden;
+	display: none;
+}
+._2_services_logo_3{
+visibility: hidden;
+	display: none;
+}
+
+/*---------------------3 блок--------------------*/
+
+._2_services_3{
+	position: relative;
+	padding-top: 0px;
+	padding-left: 20px;
+	width: 100%;
+}
+._2_services_text_3_3{
+	position: relative;
+
+	padding-right: 20px;
+	
+	width: 355px;
+}
+._2_services_text_2{
+	padding-top: 0px;
+	padding-right: 20px;
+}
+._2_services_logo_4{
+visibility: hidden;
+	display: none;
+}
+/*---------------------4 блок со вставкой оглавления блока---------------*/
+
+._2_services_4{
+	position: relative;
+	width: 100%;
+	
+	padding-top: 45px;
+	padding-left: 0px;
+	letter-spacing: -0.9px;
+	font-weight: 900;
+	color: #754e6a;
+	
+	line-height: 1.4;
+}
+._2_services_logo_4_phone{
+	visibility: visible;
+	display: block;
+	top: 53px;
+
+	padding-left: 15px;
+
+	position: absolute;
+	
+	font-size: 16px;
+
+	width: 100%;
+	text-align: left;
+}
+
+._2_services_logo_4{
+visibility: hidden;
+	display: none;
+}
+
+/*---------------------5 блок--------------------*/
+
+._2_services_5{
+	position: relative;
+	padding-top: 35px;
+	
+	width: 95%;
+	padding-left: 20px;
+	padding-left: 20px;
+	text-align:justify;
+	font-size: 14px;
+}
+._2_services_text_5_1{
+	position: relative;
+	
+	padding-right: 30px;
+	
+	width: 0px;
+}
+
+._2_services_text_5_2{
+	position: relative;
+	padding-top: 30px;
+	
+	width: 0px;
+}
+
+._2_services_text_5_3{
+	position: relative;
+	padding-top: 30px;
+	
+	width: 0px;
+}
+
+._2_services_text_5_4{
+	position: relative;
+	padding-top: 30px;
+	
+	width: 0px;
+}
+
+._2_services_img_5{
+	padding-right: 30px;
+}
+
+/*---------Подвал страницы Медицинский уход-------------*/
+.footer_2{
+	visibility: hidden;
+	display: none;
+}
+
+.footer_2_phone{
+	visibility: visible;
+	display: block;
+	
+	position: relative;
+	background: url("../img/footer/footer_phone.png");
+	width: 400px;
+	height: 470px;
+	top: 60px;
+	color: #fff;
+	/* padding-left: 32%; */
+	text-align: left;
+	font-weight: 400;
+}
+/*---------Черный подвал страницы Медицинский уход-------------*/
+.black_footer_2{
+	position: relative;
+	background: black;
+	height: 92px;
+	top: 40px;
+	bottom: 0;
+	font-size: 14px;
+	color: #fff;
+	padding-left: 40px;
+	padding-top: 38px;
+}
+
+
+/*--------------------------------------Страница Услуг  3----------------------------------------*/
+
+/*---------------------Блок со вставкой оглавления---------------*/
+.message_1{
+	visibility: hidden;
+	display: none;
+	
+	background: url("../img/message4.png");
+	position: relative;
+	top: 50px;
+	width: 100%;
+	height: 150px;
+	margin: 20px auto;
+	overflow: hidden;
+	
+	line-height: 1.3;
+}
+
+.message_text_1{
+	visibility: hidden;
+	display: none;
+	
+	font-size: 40px;
+	color: #fff;
+	font-weight: bold;
+	text-align: left;
+	padding-top: 2%;
+}
+
+/*---------------------1 блок---------------*/
+._3_services_1{
+	padding-top: 70px;
+	width: 100%;
+}
+._3_services_text_1{
+	width: 100%;
+	
+	padding-left: 30px;
+}
+._3_services_text_1_0{
+	width: 900;
+	padding-right: 45px;
+	
+	text-align:justify;
+}
+
+/*---------------------2 блок со вставкой оглавления блока---------------*/
+
+._3_services_2{
+	position: relative;
+	
+	padding-top: 45px;
+	padding-left: 45px;
+	
+	width: 100%;
+}
+
+._3_services_logo_2{
+	position: absolute;
+	
+	font-size: 24px;
+	color: #754e6a;
+	font-weight: 800;
+	
+	padding-left: 140px;
+	top: 47px;
+	width: 100%;
+}
+._3_services_logo_2-1{
+	position: absolute;
+	
+	font-size: 24px;
+	color: #754e6a;
+	font-weight: 800;
+	
+	padding-left: 25px;
+	top: 71px;
+	width: 100%;
+}
+._3_services_logo_3{
+	position: absolute;
+	
+	font-size: 24px;
+	color: #754e6a;
+	font-weight: 800;
+	
+	padding-left: 740px;
+	top: 58px;
+	width: 100%;
+}
+
+/*---------------------3 блок--------------------*/
+
+._3_services_3{
+	position: relative;
+	padding-top: 30px;
+	
+	width: 100%;
+	
+	text-align:justify;
+}
+._3_services_text_3_3{
+	position: relative;
+
+	padding-right: 30px;
+	
+	width: 800px;
+}
+._3_services_text_2{
+	padding-top: 10px;
+}
+._3_services_img{
+	padding-right: 45px;
+}
+/*---------------------4 блок со вставкой оглавления блока---------------*/
+._3_services_4{
+	position: relative;
+	
+	padding-top: 59px;
+	padding-left: 45px;
+	
+	width: 100%;
+}
+
+._3_services_logo_4{
+	position: absolute;
+	
+	font-size: 24px;
+	color: #754e6a;
+	font-weight: 800;
+	
+	padding-left: 70px;
+	top: 61px;
+	width: 100%;
+}
+._3_services_logo_4-1{
+	position: absolute;
+	
+	font-size: 24px;
+	color: #754e6a;
+	font-weight: 800;
+	
+	padding-left: 25px;
+	top: 84px;
+	width: 100%;
+}
+._3_services_logo_5{
+	position: absolute;
+	
+	font-size: 24px;
+	color: #754e6a;
+	font-weight: 800;
+	
+	padding-left: 740px;
+	top: 58px;
+	width: 100%;
+}
+/*---------------------5 блок--------------------*/
+
+._3_services_5{
+	position: relative;
+	padding-top: 30px;
+	
+	width: 100%;
+	text-align:justify;
+}
+._3_services_text_5_1{
+	position: relative;
+	
+	padding-right: 30px;
+	
+	width: 800px;
+}
+
+._3_services_text_5_2{
+	position: relative;
+	padding-top: 30px;
+	
+	width: 800px;
+}
+
+._3_services_text_5_3{
+	position: relative;
+	padding-top: 30px;
+	
+	width: 800px;
+}
+
+._3_services_text_5_4{
+	position: relative;
+	padding-top: 30px;
+	
+	width: 800px;
+}
+
+
+._3_services_img_5{
+	padding-top: 15px;
+	padding-left: 15px;
+}
+
+/*---------------------6 блок со вставкой оглавления блока---------------*/
+._3_services_6{
+	position: relative;
+	
+	padding-top: 65px;
+	padding-left: 45px;
+	
+	width: 100%;
+}
+
+._3_services_logo_6{
+	position: absolute;
+	
+	font-size: 24px;
+	color: #754e6a;
+	font-weight: 800;
+	
+	padding-left: 140px;
+	top: 77px;
+	width: 100%;
+}
+
+
+/*---------------------7 блок--------------------*/
+
+._3_services_7{
+	position: relative;
+	
+	width: 100%;
+	text-align:justify;
+}
+._3_services_text_7_1{
+	position: relative;
+	
+	padding-right: 30px;
+	
+	width: 800px;
+}
+
+._3_services_img_7{
+	padding-left: 30px;
+}
+
+
+/*---------------------8 блок со вставкой оглавления блока---------------*/
+._3_services_8{
+	position: relative;
+	
+	padding-top: 45px;
+	padding-left: 45px;
+	
+	width: 100%;
+}
+
+._3_services_logo_8{
+	position: absolute;
+	
+	font-size: 24px;
+	color: #754e6a;
+	font-weight: 800;
+	
+	padding-left: 5px;
+	top: 46px;
+	width: 100%;
+}
+._3_services_logo_8-1{
+	position: absolute;
+	
+	font-size: 24px;
+	color: #754e6a;
+	font-weight: 800;
+	
+	padding-left: 75px;
+	top: 69px;
+	width: 100%;
+}
+
+/*---------------------9 блок--------------------*/
+
+._3_services_9{
+	position: relative;
+	padding-top: 30px;
+	
+	width: 100%;
+	text-align:justify;
+}
+._3_services_text_9{
+	position: relative;
+	
+	padding-right: 45px;
+	
+	width: 1000px;
+}
+
+.button_services{
+	margin-top: 89px;
+	
+	font-family: 'Arial', sans-serif;
+	font-size: 16px;
+	background-color: #754e6a;
+	font-weight: 600;
+	
+	/*align-items: center;*/
+    position: absolute;
+	border-radius: 10px;
+	padding: 21px 75px;
+	left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);	
+	
+	color: #fff; /* Цвет текста */
+	text-decoration: none; /* Отменяем подчеркивание у ссылки */
+}
+
+.button_services:hover{
+	color: #754e6a;
+	background:#d6c0cf;
+	box-shadow: inset 0 0 0 1px #ffffff;
+}
+/*---------------------10 блок--------------------*/
+
+._3_services_10{
+	position: relative;
+	padding-top: 180px;
+	width: 100%;
+	
+	z-index: -1;
+}
+
+._3_services_text_10{
+	text-align: center;
+	font-weight: 800;
+	
+	font-size: 18px;
+	width: 1400px;
+	
+	padding-left: 15%;
+}
+
+.oformlenie_black_{
+	text-align: center;
+	font-weight: 800;
+	
+	font-size: 18px;
+}
+
+/*---------------------11 блок со вставкой оглавления блока---------------*/
+._3_services_11{
+	position: relative;
+	
+	padding-top: 45px;
+	padding-left: 45px;
+	
+	width: 100%;
+}
+
+._3_services_logo_11{
+	position: absolute;
+	
+	font-size: 24px;
+	color: #754e6a;
+	font-weight: 800;
+	
+	padding-left: 155px;
+	top: 46px;
+	width: 100%;
+}
+._3_services_logo_11-1{
+	position: absolute;
+	
+	font-size: 24px;
+	color: #754e6a;
+	font-weight: 800;
+	
+	padding-left: 15px;
+	top: 69px;
+	width: 100%;
+}
+._3_services_logo_12{
+	position: absolute;
+	
+	font-size: 24px;
+	color: #754e6a;
+	font-weight: 800;
+	
+	padding-left: 750px;
+	top: 58px;
+	width: 100%;
+}
+
+._3_services_text_12{
+	padding-left: 45px;
+}
+
+/*---------Подвал страницы 3-------------*/
+.footer_3{
+	visibility: hidden;
+	display: none;
+}
+/*---------Черный подвал страницы 3-------------*/
+.black_footer_3{
+	position: relative;
+	background: black;
+	height: 92px;
+	top: 200px;
+	bottom: 0;
+	font-size: 14px;
+	color: #fff;
+	padding-left: 40px;
+	padding-top: 38px;
+}
+
+
+/*--------------------------------------Страница Услуг  4----------------------------------------*/
+
+/*---------------------1 блок---------------*/
+._4_services_1{
+	padding-top: 70px;
+	width: 100%;
+}
+._4_services_text_1{
+	width: 100%;
+	
+	padding-left: 30px;
+}
+._4_services_text_1_0{
+	width: 900;
+	padding-right: 45px;
+	
+	text-align:justify;
+}
+._4_services_img_1{
+	padding-top: 20px;
+}
+
+/*---------------------2 блок со вставкой оглавления блока---------------*/
+
+._4_services_2{
+	position: relative;
+	
+	padding-top: 85px;
+	padding-left: 45px;
+	
+	width: 100%;
+}
+
+._4_services_logo_2{
+	position: absolute;
+	
+	font-size: 24px;
+	color: #754e6a;
+	font-weight: 800;
+	
+	padding-left: 220px;
+	top: 96px;
+	width: 100%;
+}
+
+
+/*---------------------3 блок--------------------*/
+._4_prices{
+	padding-top: 60px;
+	width: 100%;
+}
+
+/*---------------------4 блок---------------*/
+._4_services_4{
+	position: relative;
+	
+	padding-top: 60px;
+	padding-left: 45px;
+	
+	width: 100%;
+}
+
+/*---------------------6 блок---------------*/
+._4_services_6{
+	position: relative;
+	padding-top: 50px;
+	width: 100%;
+	
+	z-index: -1;
+}
+._4_services_text_6{
+	text-align: center;
+	font-weight: 800;
+	
+	font-size: 18px;
+	width: 1400px;
+	
+	padding-left: 15%;
+}
+
+
+/*---------Подвал страницы 4-------------*/
+.footer_4{
+	position: relative;
+	background: url("../img/footer1.png");
+	height: 310px;
+	top: 80px;
+	color: #fff;
+	/* padding-left: 32%; */
+	text-align: left;
+	font-weight: 400;
+}
+/*---------Черный подвал страницы 4-------------*/
+.black_footer_4{
+	position: relative;
+	background: black;
+	height: 92px;
+	top: 80px;
 	bottom: 0;
 	font-size: 16px;
 	color: #fff;
 	padding-left: 40px;
 	padding-top: 38px;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 }
