--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,10 @@ p{
 .scroll{
 	box-shadow: 0 1px 6px rgba(0,0,0,0.22);/* Параметры тени */
 }
+.otstup_phone{
+	visibility: hidden;
+	display: none;
+}
 /*-----------------------------------------Header-----------------------------------------*/
 
 .header_ {
