--- a/css/mediaMyPhone.css
+++ b/css/mediaMyPhone.css
@@ -360,17 +360,17 @@ hr{
 
 .intro{
 	width: 400px;
-	height: 300px;
+	height: 350px;
 	background: url("../img/intro4.png") no-repeat center;
 	background-size: cover;
 }
 
 .intro_text{
-	font-size: 32px;
+	font-size: 34px;
 	color: #fff;
 	font-weight: bold;
 	padding-top: 20%;
-	padding-left: 20px;
+	padding-left: 10px;
 	padding-right: 20px;
 	
 	line-height: 1.2;
@@ -389,25 +389,23 @@ hr{
 }
 
 .button_media{
+	margin-top: 60px;
 	z-index: 1000;
-	visibility: visible;
+    visibility: visible;
     display: block;
-	
-	font-size: 14px;
-	background-color: #754e6a;
-	font-weight: 500;
-	width: 170px;
-	height: 40px;
-	text-align: center;
-	padding: 10px 20px;
-	
+    font-size: 14px;
+    background-color: #754e6a;
+    font-weight: 700;
+    width: 170px;
+    height: 47px;
+    text-align: center;
+    padding: 13px 20px;
     position: absolute;
-	border-radius: 10px;
-	left: 50%;
-    transform: translate(-50%, -50%);	
-	
-	color: #fff; /* Цвет текста */
-	text-decoration: none; /* Отменяем подчеркивание у ссылки */
+    border-radius: 10px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+    text-decoration: none;
 }
 
 .button_media:hover{
@@ -417,7 +415,7 @@ hr{
 }
 /*---------------------2 блок-----------------------*/
 .dom{
-	padding-top: 23%;
+	padding-top:34%;
 }
 
 .heading{
@@ -433,11 +431,11 @@ hr{
 	
 	visibility: visible;
     display: block;
-	padding-top: 6px;
+	padding-top: 12px;
 	
 	font-size: 16px;
 	line-height: 1.35;
-	letter-spacing: -0.8px;
+	/* letter-spacing: -0.8px; */
 }
 
 /*---------------------3 блок--------------------------------*/
@@ -461,12 +459,12 @@ hr{
 .table_media{
 	visibility: visible;
     display: block;
-	padding-left: 17px;
+	padding-left: 18px;
 	line-height: 1.35;
 }
 
 .heading_item{
-	font-size: 17px;
+	font-size: 18px;
 	font-weight: 500;
 	padding-top: 8%;
 	text-align: left;
@@ -477,6 +475,9 @@ hr{
 	padding-top: 3.5%;
 	text-align: left;
 	font-size: 16px;
+	
+	text-align: justify;
+	padding-right: 10px;
 }
 
 /*------------------- 4 блок -------------------*/
@@ -941,7 +942,7 @@ input:required{
 	
 	position: relative;
 	background: url("../img/footer/footer_phone.png");
-	width: 400px;
+	width: 100%;
 	height: 470px;
 	top: 710px;
 	color: #fff;
